solve build problem

--- a/_posts/fu/2021-11-05-fancha.md
+++ b/_posts/fu/2021-11-05-fancha.md
@@ -33,7 +33,8 @@ _3_
 ![](4.jpg)
 _4_
 
-![](5.jpg)
+
+<!-- ![](5.jpg) -->
 _5_
 
 以下正文
@@ -63,13 +64,13 @@ DAY1
 
 在开车去高铁站接人妻（以下简称小骚货）之前，特意准备了一个密封袋，大家猜猜用来干嘛的？
 
-![](7.jpg)
+<!-- ![](7.jpg) -->
 _7_
 
 在高铁站接到人妻，本人比照片上更漂亮，五官精致立体，气质高雅，与网聊时的骚淫贱形成了强烈的反差对比。不过在青主这里可没有怜花惜玉，直接破防，以不容置否的眼神和语气，命令她在车上脱下内裤，交到青主手里，然后装入密封袋保管。
 因为在接下来的几天里，必须一直保持无内状态，哪怕外出，直到调教结束之后，再请求青主归还。这个突如其来的羞耻行为和仪式感，让小骚货既紧张又刺激，摸了一下，底下居然流水了……
 
-![](8.jpg)
+<!-- ![](8.jpg) -->
 _8_
 
 ![](9.jpg)
