--- a/_posts/gold/2022-01-06-exercise.md
+++ b/_posts/gold/2022-01-06-exercise.md
@@ -8,10 +8,7 @@ categories: [gold]
 tags: [dick]
 math: true
 mermaid: true
-# image:
-#   path: /assets/img/posts/2017-10-24/34.jpg
-#   width: 800
-#   height: 500
+image: /assets/img/posts/1.png
 ---
 
 [参考](https://sexyjpg.com/forum/board-edeaee40-f583-4502-af87-0c450ec7f2aa/topic)
