--- a/_posts/fu/2019-09-22-fang-b.md
+++ b/_posts/fu/2019-09-22-fang-b.md
@@ -10,7 +10,7 @@ math: true
 mermaid: true
 img_path: /assets/img/posts/2019-09-21/
 image:
-  path: a-0.jpg
+  path: b-0.jpg
   width: 800
   height: 500
 ---
