--- a/_posts/piapiao/2019-06-11-piao-10.md
+++ b/_posts/piapiao/2019-06-11-piao-10.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-20 11:40:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/10.jpg
 ---
 
 看着自己的妻子撅着大屁股给别人摸，我早就来了兴致，把妻子头扭过来就吻了上去，妻子也激动的和我的舌头搅在一起。
