--- a/_posts/piapiao/2019-06-11-piao-24.md
+++ b/_posts/piapiao/2019-06-11-piao-24.md
@@ -6,6 +6,7 @@ author:
 date: 2019-07-04 11:54:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/24.jpg
 ---
 
 4点收到妻子发来的短消息：“晚上家里来客人，孩子去姥姥家了。”要我晚些时候回来。下班之后我在商场无聊的逛了半天，去超市又买了一些东西，去她父母家。晚上快10点收到妻子发来的短消息：“回家。”
