--- a/_posts/piapiao/2019-06-11-piao-26.md
+++ b/_posts/piapiao/2019-06-11-piao-26.md
@@ -6,6 +6,7 @@ author:
 date: 2019-07-06 11:56:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/26.jpg
 ---
 
 晚上的饭局很无聊，几个公司头儿和美国的客户，两个老美还不喝酒，结果九点一过就散了。吴总让我送老美回酒店后再给他打电话，他找个地方大家放松放松。后来我们几个去了日坛公园咐近的一个酒吧又玩到半夜。
