--- a/_posts/piapiao/2019-06-11-piao-4.md
+++ b/_posts/piapiao/2019-06-11-piao-4.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-14 11:34:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/4.jpg
 ---
 
 前三集大家都很喜欢，继续发飘飘回忆录第四集
