--- a/_posts/piapiao/2019-06-11-piao-9.md
+++ b/_posts/piapiao/2019-06-11-piao-9.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-19 11:39:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/9.jpg
 ---
 
 老早就加过他了，一直有一句没一句的聊着，08年1月份的时候开始大肆的聊天，他管做爱叫做交配，说这样说话才刺激，和他聊天确实也给我带来了与众不同的刺激。
