--- a/_posts/piapiao/2019-06-11-piao-1.md
+++ b/_posts/piapiao/2019-06-11-piao-1.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-11 11:31:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/1.jpg
 ---
 
 记录我们夫妻群交游戏这些年。首先，我所写的都是真实的发生在我们夫妻身上的事情，从06年开始游戏到现在。群交换妻在中国，也已经不是什么新鲜的事情了，我就以我们夫妻所经历的这些年的群交游戏为题，给大家真实讲述一个很和谐的性开放家庭，对错大家去评说。
