--- a/_posts/piapiao/2019-06-11-piao-11.md
+++ b/_posts/piapiao/2019-06-11-piao-11.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-21 11:41:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/11.jpg
 ---
 
 我有点不明白的是，很多单男玩过我妻子几次之后，都会想单独玩飘飘，不知道是什么心理，当着我的面玩弄我妻子和一对一的单独玩弄我妻子感觉肯定不一样，但是后者真的能和前者的刺激相提并论吗？还是后者更刺激？因为我不是单男所以体会不到，要是有单男也有这个喜好，可以和我说说。
