--- a/_posts/piapiao/2019-06-11-piao-12.md
+++ b/_posts/piapiao/2019-06-11-piao-12.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-22 11:42:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/12.jpg
 ---
 
 正说着，王哥那屋的门开了，我看见妻子和王哥一起走了出来，王哥和我妻子身上的衣服竟然一件没少，而仔细看飘飘的身体，我的血液就慢慢的沸腾了。
