--- a/_posts/piapiao/2019-06-11-piao-13.md
+++ b/_posts/piapiao/2019-06-11-piao-13.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-23 11:43:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/13.jpg
 ---
 
 12月份以后，因为工作太忙，一直没有再交友。有一天中学的同学聚会，下班后我接了妻子，然后一起去。飘飘平时也爱化点淡妆，今天更加仔细精致，而且穿了一件长衫，一直到大腿，低胸的，紧贴着身体，一对丰满的大奶子挺在胸前。
