--- a/_posts/piapiao/2019-06-11-piao-15.md
+++ b/_posts/piapiao/2019-06-11-piao-15.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-25 11:45:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/15.jpg
 ---
 
 06年2月一开春就都是好事，先是生意上赚了一笔，又结交了个大人物，将来靠着他一齐做，定是前途无量。再有就是我认识了那个医生。
