--- a/_posts/piapiao/2019-06-11-piao-16.md
+++ b/_posts/piapiao/2019-06-11-piao-16.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-26 11:46:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/16.jpg
 ---
 
 12月份，我的生意开始好得让我忙不过来了，挣了钱投入股市，几乎天天都得干到九点多，收工的时候几乎已经精疲力竭了，当然我每次知道飘飘在家挨操，心里都感到十分惬意冲动。
