--- a/_posts/piapiao/2019-06-11-piao-18.md
+++ b/_posts/piapiao/2019-06-11-piao-18.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-28 11:48:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/18.jpg
 ---
 
 说真的，进入了夫妻3Ｐ交友这个圈子后，我们的夫妻生活更好了，感情也更好了。有些朋友可能会奇怪，我也不会多解说，自己慢慢体会吧！因为夫妻交换，是夫妻间真正的为对方付出，这不单单只是个人的享乐，而玩这个，首先的前提必须是自己夫妻感情稳定，确信自己与对方都不会因为激情而抛却家庭。
