--- a/_posts/piapiao/2019-06-11-piao-19.md
+++ b/_posts/piapiao/2019-06-11-piao-19.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-29 11:49:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/19.jpg
 ---
 
 生活还在继续，夏季我原本想带一家去东南亚和香港走一趟，飘飘心情一直都不好，那一百块的阴影还没完全从我们的生活中散去。那天我们又一次争吵，“我不是没和你讲过，玩儿这个没有那么认真的！”我大声向她吼着。“你是不是把我当成……你是不是一直把我当成……‘鸡’？”她声音很轻。
