--- a/_posts/piapiao/2019-06-11-piao-21.md
+++ b/_posts/piapiao/2019-06-11-piao-21.md
@@ -6,6 +6,7 @@ author:
 date: 2019-07-01 11:51:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/21.jpg
 ---
 
 11月的时候集团派我到海南去，不想去也得去，于是就动了身。临走的时候，又约那个医生来我家玩了一次飘飘。可能是想到一分开就得几个月，就又剃毛又浣肠。
