--- a/_posts/piapiao/2019-06-11-piao-25.md
+++ b/_posts/piapiao/2019-06-11-piao-25.md
@@ -6,6 +6,7 @@ author:
 date: 2019-07-05 11:55:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/25.jpg
 ---
 
 日子开始平淡的过去，我始终坚持不拿鸡巴操飘飘，有时最多只给她啜几下屄，这对平时一贯用鸡巴解决问题的她显然是杯水车薪。
