--- a/_posts/piapiao/2019-06-11-piao-27.md
+++ b/_posts/piapiao/2019-06-11-piao-27.md
@@ -6,6 +6,7 @@ author:
 date: 2019-07-07 11:57:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/27.jpg
 ---
 
 早上汤姐打电话把我叫醒，来到外面，有个女孩带我下楼进了一个小饭厅，吴总、汤姐已经吃上了，汤姐招呼我坐下。三人谈笑着用完饭，走的时候吴总让汤姐给我留了电话，让我想来就来，汤姐红着脸拿我的手机把号码输入，还给我时，我趁机狠撸了她的手一下。
