--- a/_posts/piapiao/2019-06-11-piao-8.md
+++ b/_posts/piapiao/2019-06-11-piao-8.md
@@ -6,6 +6,7 @@ author:
 date: 2019-06-18 11:38:00 +0800
 categories: [piao]
 tags: [wife]
+image: /assets/img/posts/piaopiao/8.jpg
 ---
 
 我又想找黑夜和矛盾一起玩，他们两个都同意，约了几次，不是黑夜不方便，就是矛盾有事情，再者我忙，或者妻子来例假，总之这个愿望没有在黑夜和矛盾身上实现。
