--- a/_posts/fu/2019-09-21-fang-a.md
+++ b/_posts/fu/2019-09-21-fang-a.md
@@ -19,6 +19,9 @@ image:
 ![][a-01]
 _a-01_
 
+![][a-011]
+_a-01-01_
+
 ![][a-02]
 _a-02_
 
@@ -274,6 +277,7 @@ _b-57_
 最后，短暂开放一次圈子进入，因为里面大部分都是现实活动过的夫妻情侣、单男单女，以及追随了青主多年的铁粉，所以一直有较高的门槛和要求。高标准高质量，只为打造一个低调快乐的小世界，和有意思的人，做点有意思的事！其余不解释不闲聊不扯淡！！能接受和认同者再加 QQ2772610536 联系，介意勿扰！！
 
 [a-01]:a-1.jpg
+[a-011]:a-1-1.jpg
 [a-02]:a-2.jpg
 [a-03]:a-3.jpg
 [a-04]:a-4.jpg
