--- a/_posts/fu/2019-09-22-fang-b.md
+++ b/_posts/fu/2019-09-22-fang-b.md
@@ -19,6 +19,9 @@ image:
 ![][a-01]
 _a-01_
 
+![][a-011]
+_a-01-01_
+
 ![][a-02]
 _a-02_
 
@@ -163,6 +166,7 @@ _c-32_
 最后放一个备用号企鹅：2妻72610536，推特号：91fuqingzhu，加我请慎重，不闲聊不扯淡，因为青主的圈子，一直有不低的门槛或者要求，排除掉不在一个频道和层次的人！非诚勿扰！！！
 
 [a-01]:a-1.jpg
+[a-011]:a-1-1.jpg
 [a-02]:a-2.jpg
 [a-03]:a-3.jpg
 [a-04]:a-4.jpg
