--- a/_posts/fu/2017-10-24-white.md
+++ b/_posts/fu/2017-10-24-white.md
@@ -34,10 +34,9 @@ _01_
 
 夫妻俩曾经在7月份的时候来过一次东莞，但是因为动身那天早上，突然临时知道怀孕消息，而千里赴约，只为一句承诺！直到恢复好身体后，再次过来，因为，或许，只有青主，才是懂得他们并且能够满足他们需要的人！
 
-![](2.jpg)
-_02_
-![](3.jpg)
-_03_
+![](2.jpg){: .normal .me-2}
+![](3.jpg){: .normal}
+_02~03_
 
 女K，暂且先这样称呼吧，分公司总经理，如果不是后来发生的一切，任谁也想不到，美艳高冷知性的外表下，却有着怎样的骚贱。这种反差感给她带来的刺激，又会是怎么样呢？
 
@@ -213,17 +212,11 @@ _37_
 
 第2日的调教，太过刺激，原谅我已经暂时无法用文字或者图片来描述了，就先以聊天记录的方式吧，或许以后，会专门做一个帖子来叙说！
 
-![](38.jpg)
-_38_
-
-![](39.jpg)
-_39_
-
-![](40.jpg)
-_40_
-
-![](41.jpg)
-_41_
+![](38.jpg){: .normal .me-2 style="zoom: 80%"}
+![](39.jpg){: .normal .me-2 style="zoom: 80%"}
+![](40.jpg){: .normal .me-2 style="zoom: 80%"}
+![](41.jpg){: .normal style="zoom: 80%"}
+_38~41_
 
 ![](42.jpg)
 _42_
