--- a/_posts/fu/2017-10-25-flower.md
+++ b/_posts/fu/2017-10-25-flower.md
@@ -74,6 +74,7 @@ _11_
 _12_
 
 ---
+
 以下进入正文
 
 **一调一教一世界，半痴半迷半沉沦**
@@ -118,7 +119,6 @@ _19_
 
 ![](20.jpg)
 _20_
-
 
 
 在走过酒店大堂的时候，“哒哒哒”的高跟鞋声和“叮铃铃”的铃铛声，吸引了不少人侧目相看，从他们的神情中，我读到艳羡，也有鄙视……
@@ -260,17 +260,17 @@ _58_
 
 夜深了，也累了，不想说再多的文字，就让诸多参与的狼友们自己说吧
 
-![](59.jpg){: .normal style="max-width: 33%"}
-![](60.jpg){: .normal style="max-width: 33%"}
-![](61.jpg){: .normal style="max-width: 33%"}
-![](62.jpg){: .normal style="max-width: 33%"}
-![](63.jpg){: .normal style="max-width: 33%"}
-![](64.jpg){: .normal style="max-width: 33%"}
-![](65.jpg){: .normal style="max-width: 33%"}
-![](66.jpg){: .normal style="max-width: 33%"}
-![](67.jpg){: .normal style="max-width: 33%"}
-![](68.jpg){: .normal style="max-width: 33%"}
-![](69.jpg){: .normal style="max-width: 33%"}
+![](59.jpg){: .normal .me-2 style="zoom: 60%"}
+![](60.jpg){: .normal .me-2 style="zoom: 60%"}
+![](61.jpg){: .normal .me-2 style="zoom: 60%"}
+![](62.jpg){: .normal .me-2 style="zoom: 60%"}
+![](63.jpg){: .normal .me-2 style="zoom: 60%"}
+![](64.jpg){: .normal .me-2 style="zoom: 60%"}
+![](65.jpg){: .normal .me-2 style="zoom: 60%"}
+![](66.jpg){: .normal .me-2 style="zoom: 60%"}
+![](67.jpg){: .normal .me-2 style="zoom: 60%"}
+![](68.jpg){: .normal .me-2 style="zoom: 60%"}
+![](69.jpg){: .normal style="zoom: 60%" }
 _59~69_
 
 最后，慎重公布一次本人企鹅主号：二四久要六妻零一三五。单男勿扰！只接受能现实的广东夫妻、情侣，通过后会进行严格验证，其他一切诸如请教的，意淫的，嘴嗨的，烦请绕道！！！
