--- a/_posts/fu/2018-02-02-horse.md
+++ b/_posts/fu/2018-02-02-horse.md
@@ -20,6 +20,7 @@ image:
 ---
 
 ## “千里走单骑，调七情，纵六欲”
+
 七情：喜、怒、忧、思、悲、恐、惊
 六欲：眼、耳、鼻、舌、身、意
 青主一直认为，欲望，永远是推动人类进步与发展的最重要因素，没有之一！
@@ -29,16 +30,18 @@ image:
 千里迢迢过来广东接受单调，蕴藏着许多的未知和风险。而对方的信任，来源于青主一贯以之的原则——诚待人，信为本。包括任何一篇帖子，不黑不粉，既没有华丽的辞藻，更没有哗众取宠的夸张煽情。无它，因为只有真实的东西，才是最有意义和最有生命力的，这也是为什么青主能够得到绝大部分人认同的原因！而且所有拍摄和发帖，均是应对方要求，同时也会保护好所有隐私，让大家低调而安全的快乐！
 
 ---
+
 ### 第一日（Day 1）
+
 一场美妙的调教，其实是从踏上行程开始，也让5个多小时的旅程，变的不那么的寂寞和无趣……
 
 ![](a-1.jpg)
 _a-01_
 
-![](a-2.jpg){: .normal style="max-width: 33%"}
-![](a-3.jpg){: .normal style="max-width: 33%"}
-![](a-4.jpg){: .normal style="max-width: 33%"}
-![](a-5.jpg){: .normal style="max-width: 33%"}
+![](a-2.jpg){: .normal .me-2 style="zoom: 85%"}
+![](a-3.jpg){: .normal .me-2 style="zoom: 85%"}
+![](a-4.jpg){: .normal .me-2 style="zoom: 85%"}
+![](a-5.jpg){: .normal style="zoom: 80%"}
 _a-02~05_
 
 从高铁站接到人妻，首先检查有没有按照要求无内，结果被旁边的渣土车司机看到，狂追几公里……
@@ -106,7 +109,9 @@ _a-21_
 _a-22_
 
 ---
+
 ### 第二日（day 2）
+
 经过第一天的调教，人妻已经变的大胆很多，也对第二天的调教充满了期待，当然，还有远在千里之外的绿帽老公。
 
 ![](b-1.jpg)
@@ -115,11 +120,9 @@ _b-01_
 ![](b-2.jpg)
 _b-02_
 
-![](b-3.jpg)
-_b-03_
-
-![](b-4.jpg)
-_b-04_
+![](b-3.jpg){: .normal .me-4 style="zoom: 85%"}
+![](b-4.jpg){: .normal style="zoom: 85%"}
+_b-03~04_
 
 但是她没有想到以这种特殊的方式，迎来早就在磨枪霍霍群里的2位优质兄弟，等到解开横穿胯下的股绳，发现绳子早已被淫水沁透……
 
@@ -161,11 +164,9 @@ _b-15_
 某伟人曾经说过：浪费就是极大的犯罪！
 双插，三明治，三洞齐入，不浪费每一个地方，让每个洞都得到饱胀的充盈感，再好的文字，都已经难以描述其中之妙，只有男人们的急喘声和女人的娇呼狂叫，有如投入万丈温暖海洋，深含，浅荡，沉醉，飞翔……
 
-![](b-16.jpg)
-_b-16_
-
-![](b-17.jpg)
-_b-17_
+![](b-16.jpg){: .normal .me-2 style="zoom: 95%"}
+![](b-17.jpg){: .normal style="zoom: 95%"}
+_b-16~17_
 
 ![](b-18.jpg)
 _b-18_
@@ -194,6 +195,7 @@ _b-24_
 _b-25_
 
 ---
+
 ### 第三日（day 3）
 彻底臣服后的人妻，化身为青主的小母狗
 
