--- a/_posts/gold/2022-03-17-web.md
+++ b/_posts/gold/2022-03-17-web.md
@@ -14,85 +14,130 @@ pin: true
 
 ### 威盛
 
- A                  |                    B
------- | ------
-[Vixen](https://www.vixen.com)     | [Deeper](https://www.deeper.com)
-[Tushy](https://www.tushy.com)     | [TushyRaw](https://www.tushyraw.com)
-[Blacked](https://www.blacked.com) | [BlackedRaw](https://www.blackedraw.com)
-[Slayed](https://www.slayed.com)   | [Milfy](https://www.milfy.com/)
+ | A                                  | B                                        |
+ |------------------------------------|------------------------------------------|
+ | [Vixen](https://www.vixen.com)     | [Deeper](https://www.deeper.com)         |
+ | [Tushy](https://www.tushy.com)     | [TushyRaw](https://www.tushyraw.com)     |
+ | [Blacked](https://www.blacked.com) | [BlackedRaw](https://www.blackedraw.com) |
+ | [Slayed](https://www.slayed.com)   | [Milfy](https://www.milfy.com/)          |
 
 ### 聚合网址
 
-Category|Name|Taghugo
-:-:|-|:-:
-&#127909;|[Sxyprn](https://sxyprn.com/)|Integrated
-&#127909;|[Trex](https://www.porntrex.com/)|Integrated
-&#127909;|[HotMovies](https://hotmovs.com/)|Integrated
-&#127909;|[AnyBunny](http://anybunny.com/)|Integrated
-&#127909;|[SexTV](https://www.sextvx.com/)|Integrated
-&#127909;|[VintageTube](https://vintagetube.xxx/)|Vintage
-&#127909;|[Jav](https://sextop.net/)|&#128510;
-&#128248;|[PornPic](https://www.pornpics.com/)|Image
+| Category  | Name                                    |  Taghugo  |
+|:---------:|-----------------------------------------|:---------:|
+| &#127909; | [Sxyprn](https://sxyprn.com/)           | &#128509; |
+| &#127909; | [Trex](https://www.porntrex.com/)       | &#128509; |
+| &#127909; | [HotMovies](https://hotmovs.com/)       | &#128509; |
+| &#127909; | [AnyBunny](http://anybunny.com/)        | &#128509; |
+| &#127909; | [SexTV](https://www.sextvx.com/)        | &#128509; |
+| &#127909; | [VintageTube](https://vintagetube.xxx/) | &#129491; |
+| &#127909; | [Jav](https://sextop.net/)              | &#128510; |
+| &#127909; | [Table](https://jable.tv/)              | &#128510; |
+| &#128248; | [PornPic](https://www.pornpics.com/)    | &#128248; |
+
+---
 
 ## 经典收集
-### Telegram ph
 
-标题   |   平台   |    日期    |       作者
------- | -------- | ---------- | --------
-[【世纪大片2️】哺乳期人妻偷情 乳汁四溢 荣膺人间极品][ferdinand117-d]   | 91Porn   | 2023/06/27 | ferdinand117
-[022 哺乳偷情人妻第二部之不穿内衣出门让男人看][ferdinand117-c]          | 91Porn   | 2023/06/08 | ferdinand117
-[【世纪大片】022 极品偷情人妻 此骚女真的只应天上有！！][ferdinand117-b] | 91Porn   | 2023/06/02 | ferdinand117
-[第一部 白嫩人妻把酒店门打开渴望着陌生男人看他操她][ferdinand117-a] | 91Porn   | 2023/05/06 | ferdinand117
-[papabear010][papabear]                                           | Twitter  | 2023/06/24 | papabear010
-[fuqinzhu PIC 合集][fuqinzhu-a]                                              | Twitter  | 2023/02/04 | 缚青主
-[十八般反差 ][shibaban]                                           | Twitter  | 2023/01/27 | @Q7K9JlysU58v7Hk
-[Monday pic][monday]                                            | Telegram | 2023/02/04 | Monday
-江苏泰州招男m                                         | 91Porn   | 2023/02/02 | kaxi0307
-5p大作战                                              | 91Porn   | 2023/01/20 | 月上柳梢头
-27岁人妻少妇被肆意的羞辱                              | 91Porn   | 2023/01/02 | 凉世88
-偷情27岁人妻之母狗的不归路                            | 91Porn   | 2022/12/23 | 凉世88
-捆绑 滴蜡 肛塞 调教反差母狗女神骚妻                   | 91Porn   | 2022/11/25 | nono小宝贝
-[那些花儿]知性温柔反差OL                              | 91Porn   | 2022/10/24 | MrDerek
-长腿黑丝网衣骚妻3P之夜                                | 91Porn   | 2022/10/23 | nono小宝贝
-后入黑丝母狗精液肉便器                                | 91Porn   | 2022/10/16 | 美人捕手
-反差女神老婆的潮吹之夜。寻优质单男                    | 91Porn   | 2022/10/13 | nono小宝贝
-广州旗袍红边丝袜 极品长腿翘臀人妻诱惑                 | 91Porn   | 2022/09/21 | 沈沐风
-30岁高跟丝袜淫妻                                      | 91Porn   | 2022/08/16 | 91Amber1990
-带着骚妻第一次3人行                                   | 91Porn   | 2022/06/21 | 骚逼西西
-内射贵妇人妻之攻破堡垒江浙沪篇隆重来袭                | 91Porn   | 2022/06/19 | xiasinitian
-~长腿女神人妻寻线上交流                               | 91Porn   | 2022/06/01 | nobody001
-（云南）风情万种，凡间尤物                            | 91Porn   | 2022/03/08 | 腿丝
-（云南）罪恶的弥散                                    | 91Porn   | 2022/03/01 | 腿丝
-（云南）春天的尤物                                    | 91Porn   | 2022/02/25 | 腿丝
-[那些花儿]肥臀风骚肛交御姐                            | 91Porn   | 2022/02/20 | MrDerek
-【出牝入屄】丝袜娇妻紧实骚逼的抽插                    | 91Porn   | 2022/02/12 | LiV200839000
-黑丝复古绿宫廷套                                      | 91Porn   | 2021/10/22 | Mr_lost
-黑丝束腰肛交，展现女性曲线                            | 91Porn   | 2021/08/28 | Mr_lost
-郑州0371新人情侣首发验证申精                          | 91Porn   | 2020/05/12 | nono小宝贝
-人妻伺奉奴和肉便器养成记                              | 91Porn   | 2019/09/12 | 缚青主
-OL美人妻酒店诱惑                                      | 91Porn   | 2018/08/13 | Superjing
-春暖花开，乳此美好，高尔夫球场内的5P大战              | 91Porn   | 2018/04/01 | 缚青主
-千里走单骑-调七情纵六欲                               | 91Porn   | 2018/02/02 | 缚青主
-极品娇美人妻之光影魅惑                                | 91Porn   | 2018/01/26 | 缚青主
-一调一教一世界，半痴半迷半沉沦                        | 91Porn   | 2017/10/25 | 缚青主
-欲奴-从白富美到骚淫贱之完全调教                       | 91Porn   | 2017/10/24 | 缚青主
-凤头！虎躯！豹尾                                      | 91Porn   | 2017/07/19 | 缚青主
-2天2夜人妻调教之全开发                                | 91Porn   | 2017/03/31 | 缚青主
-我的心历路程                                          | 91Porn   | 2016/07/24 | 成都微笑
-美臀控，后入极品，无限三通                            | 91Porn   | 2012/06/16 | wushuang369369
-当瑜伽狗遇上舔逼狂男                                  | 91Porn   | 2023/02/11 | 给力2017
-[人妻写真集---[您好，2021]][qiaotunyingqi-h]                           | 91Porn   | 2021/01/02 | 翘臀淫妻
-[《公司业绩第一的OL秘书》-下][qiaotunyingqi-g]                          | 91Porn   | 2019/01/11 | 翘臀淫妻
-[《公司业绩第一的OL秘书》-上][qiaotunyingqi-f]                          | 91Porn   | 2018/10/31 | 翘臀淫妻
-[酒店暴艹拍写真的长腿模特女神][qiaotunyingqi-e]                        | 91Porn   | 2018/03/08 | 翘臀淫妻
-[[导演下海]口舌侍奉-空姐人妻的淫荡脚趾][qiaotunyingqi-c]                | 91Porn   | 2018/01/25 | 翘臀淫妻
-[[新婚妻子] 疯狂电影院之被其他男人中出][qiaotunyingqi-a]                | 91Porn   | 2017/07/29 | 翘臀淫妻
-[[2018献礼] 内射球桌上成熟性感的高跟大奶人妻女郎 (上)][qiaotunyingqi-b]  | 91Porn   | 2018/01/01 | 翘臀淫妻
-[[情人节礼物] 内射球桌上的性感高跟大奶人妻[下]][qiaotunyingqi-d]        | 91Porn   | 2018/02/14 | 翘臀淫妻
-极品颜值身材黑丝高跟御姐车模反差婊                    | 91Porn   | 2023/02/22 | 黑色禁乐
-极品身材颜值黑色连体情趣内衣御姐                      | 91Porn   | 2023/02/24 | 黑色禁乐
+### 缚青主
+
+| 标题                                     | 平台    | 日期       | 作者   |
+|------------------------------------------|---------|------------|--------|
+| [fuqinzhu PIC 合集][fuqinzhu-a]          | Twitter | 2023/02/04 | 缚青主 |
+| 人妻伺奉奴和肉便器养成记                 | 91Porn  | 2019/09/12 | 缚青主 |
+| 春暖花开，乳此美好，高尔夫球场内的5P大战 | 91Porn  | 2018/04/01 | 缚青主 |
+| 千里走单骑-调七情纵六欲                  | 91Porn  | 2018/02/02 | 缚青主 |
+| 极品娇美人妻之光影魅惑                   | 91Porn  | 2018/01/26 | 缚青主 |
+| 一调一教一世界，半痴半迷半沉沦           | 91Porn  | 2017/10/25 | 缚青主 |
+| 欲奴-从白富美到骚淫贱之完全调教          | 91Porn  | 2017/10/24 | 缚青主 |
+| 凤头！虎躯！豹尾                         | 91Porn  | 2017/07/19 | 缚青主 |
+| 2天2夜人妻调教之全开发                   | 91Porn  | 2017/03/31 | 缚青主 |
+
+###  翘臀淫妻
+
+| 标题                                                                    | 平台   | 日期       | 作者     |
+|-------------------------------------------------------------------------|--------|------------|----------|
+| [人妻写真集---[您好，2021]][qiaotunyingqi-h]                            | 91Porn | 2021/01/02 | 翘臀淫妻 |
+| [《公司业绩第一的OL秘书》-下][qiaotunyingqi-g]                          | 91Porn | 2019/01/11 | 翘臀淫妻 |
+| [《公司业绩第一的OL秘书》-上][qiaotunyingqi-f]                          | 91Porn | 2018/10/31 | 翘臀淫妻 |
+| [酒店暴艹拍写真的长腿模特女神][qiaotunyingqi-e]                         | 91Porn | 2018/03/08 | 翘臀淫妻 |
+| [[情人节礼物] 内射球桌上的性感高跟大奶人妻[下]][qiaotunyingqi-d]        | 91Porn | 2018/02/14 | 翘臀淫妻 |
+| [[导演下海]口舌侍奉-空姐人妻的淫荡脚趾][qiaotunyingqi-c]                | 91Porn | 2018/01/25 | 翘臀淫妻 |
+| [[2018献礼] 内射球桌上成熟性感的高跟大奶人妻女郎 (上)][qiaotunyingqi-b] | 91Porn | 2018/01/01 | 翘臀淫妻 |
+| [[新婚妻子] 疯狂电影院之被其他男人中出][qiaotunyingqi-a]                | 91Porn | 2017/07/29 | 翘臀淫妻 |
+
+### Twitter
+
+| 标题                            | 平台    | 日期       | 作者             |
+|---------------------------------|---------|------------|------------------|
+| [十八般反差 ][shibaban]         | Twitter | 2023/01/27 | @Q7K9JlysU58v7Hk |
+| 2tgdt                           | Twitter | 2023/07/09 | 2tgdt            |
+| 晨风                            | Twitter | 2023/07/15 | 晨风             |
+| PHOTOGRAPHY                     | Twitter | 2023/07/05 | 大明Rico         |
+| 鸠摩智                          | Twitter | 2023/07/22 | 鸠摩智           |
+| 泣妻器骑                        | Twitter | 2023/07/15 | 泣妻器骑         |
+| 人间正道是沧桑                  | Twitter | 2023/07/02 | 人间正道是沧桑   |
+| 非知名健身博主                  | Twitter | 2023/07/02 | 人间正道是沧桑   |
+| 肉便器琪琪                      | Twitter | 2023/07/09 | 肉便妻琪琪       |
+| [为妻而摄][lens4wife]           | Twitter | 2023/07/02 | 为妻而摄         |
+| 小浣熊                          | Twitter | 2023/07/05 | 小浣熊           |
+| BMWZ                            | Twitter | 2023/07/05 | BMWZ             |
+| [papabear010][papabear]         | Twitter | 2023/06/24 | papabear010      |
+| QWERXPZ                         | Twitter | 2023/07/15 | QWERXPZ          |
+| z先生                           | Twitter | 2023/07/16 | z先生            |
+
+### Telegram
+
+| 标题                 | 平台     | 日期       | 作者         |
+|----------------------|----------|------------|--------------|
+| 可遇不可求           | Telegram | 2023/07/02 | 可遇不可求   |
+| champagne TT         | Telegram | 2023/07/02 | champagne TT |
+| Fyz cccan            | Telegram | 2023/07/09 | Fyz cccan    |
+| [Monday pic][monday] | Telegram | 2023/02/04 | Monday       |
+
+### 91porn
+
+| 标题                                                                    | 平台   | 日期       | 作者           |
+|-------------------------------------------------------------------------|--------|------------|----------------|
+| 30岁高跟丝袜淫妻                                                        | 91Porn | 2022/08/16 | 91Amber1990    |
+| 我的心历路程                                                            | 91Porn | 2016/07/24 | 成都微笑       |
+| 当瑜伽狗遇上舔逼狂男                                                    | 91Porn | 2023/02/11 | 给力2017       |
+| 极品颜值身材黑丝高跟御姐车模反差婊                                      | 91Porn | 2023/02/22 | 黑色禁乐       |
+| 极品身材颜值黑色连体情趣内衣御姐                                        | 91Porn | 2023/02/24 | 黑色禁乐       |
+| 27岁人妻少妇被肆意的羞辱                                                | 91Porn | 2023/01/02 | 凉世88         |
+| 偷情27岁人妻之母狗的不归路                                              | 91Porn | 2022/12/23 | 凉世88         |
+| 后入黑丝母狗精液肉便器                                                  | 91Porn | 2022/10/16 | 美人捕手       |
+| 带着骚妻第一次3人行                                                     | 91Porn | 2022/06/21 | 骚逼西西       |
+| 广州旗袍红边丝袜 极品长腿翘臀人妻诱惑                                   | 91Porn | 2022/09/21 | 沈沐风         |
+| （云南）风情万种，凡间尤物                                              | 91Porn | 2022/03/08 | 腿丝           |
+| （云南）罪恶的弥散                                                      | 91Porn | 2022/03/01 | 腿丝           |
+| （云南）春天的尤物                                                      | 91Porn | 2022/02/25 | 腿丝           |
+| 5p大作战                                                                | 91Porn | 2023/01/20 | 月上柳梢头     |
+| [【世纪大片2️】哺乳期人妻偷情 乳汁四溢 荣膺人间极品][ferdinand117-d]     | 91Porn | 2023/06/27 | ferdinand117   |
+| [022 哺乳偷情人妻第二部之不穿内衣出门让男人看][ferdinand117-c]          | 91Porn | 2023/06/08 | ferdinand117   |
+| [【世纪大片】022 极品偷情人妻 此骚女真的只应天上有！！][ferdinand117-b] | 91Porn | 2023/06/02 | ferdinand117   |
+| [第一部 白嫩人妻把酒店门打开渴望着陌生男人看他操她][ferdinand117-a]     | 91Porn | 2023/05/06 | ferdinand117   |
+| 江苏泰州招男m                                                           | 91Porn | 2023/02/02 | kaxi0307       |
+| 【出牝入屄】丝袜娇妻紧实骚逼的抽插                                      | 91Porn | 2022/02/12 | LiV200839000   |
+| 黑丝复古绿宫廷套                                                        | 91Porn | 2021/10/22 | Mr_lost        |
+| 黑丝束腰肛交，展现女性曲线                                              | 91Porn | 2021/08/28 | Mr_lost        |
+| [那些花儿]知性温柔反差OL                                                | 91Porn | 2022/10/24 | MrDerek        |
+| [[那些花儿]肥臀风骚肛交御姐][flower-1]                                  | 91Porn | 2022/02/20 | MrDerek        |
+| ~长腿女神人妻寻线上交流                                                 | 91Porn | 2022/06/01 | nobody001      |
+| 捆绑 滴蜡 肛塞 调教反差母狗女神骚妻                                     | 91Porn | 2022/11/25 | nono小宝贝     |
+| 长腿黑丝网衣骚妻3P之夜                                                  | 91Porn | 2022/10/23 | nono小宝贝     |
+| 反差女神老婆的潮吹之夜。寻优质单男                                      | 91Porn | 2022/10/13 | nono小宝贝     |
+| 郑州0371新人情侣首发验证申精                                            | 91Porn | 2020/05/12 | nono小宝贝     |
+| OL美人妻酒店诱惑                                                        | 91Porn | 2018/08/13 | Superjing      |
+| 美臀控，后入极品，无限三通                                              | 91Porn | 2012/06/16 | wushuang369369 |
+| 内射贵妇人妻之攻破堡垒江浙沪篇隆重来袭                                  | 91Porn | 2022/06/19 | xiasinitian    |
+| [娇妻与大学生弟弟首次3p 气氛拉满多图记录][sluttyeva]                    | 91porn | 2023/8/14  | sluttyeva      |
+| [91第六贴。34岁骚妻，紧身牛仔库里丝，微露脸动图申精！][amber-2]         | 91porn | 2023/8/20  | 91Amber1990    |
+| [【绿光第一集】受邀绿帽大学生情侣调教][doctorsonny-1]                   | 91porn | 2023/7/19  | doctorsonny    |
+| [【绿光第二集】绿帽大学生情侣调教户外露出婚纱写真][doctorsonny-2]                   | 91porn | 2023/8/18  | doctorsonny    |
 
 ### darkreaver系列
+
 1. [【Dark 妖艳贴】第一贴，今天开始，那个芭蕾美女。[14P+1P验证]](http://www.sexinsex.net/bbs/disbox.php?action=viewpost&pid=82111193)
 1. [【Dark 妖艳贴】第二贴，继续吧，这次是打台球的妹妹。[14P] + [2P预告] + [1P验证]](http://www.sexinsex.net/bbs/disbox.php?action=viewpost&pid=82209145)
 1. [【Dark 妖艳贴】第三贴，关于双飞的四个境界。[15P] + [1P预告] + [1P验证]](http://www.sexinsex.net/bbs/disbox.php?action=viewpost&pid=82355679)
@@ -112,7 +157,7 @@ OL美人妻酒店诱惑                                      | 91Porn   | 2018/0
 1. [【Dark 妖艳贴】第十七贴，光棍节的惊喜，1米8的模特（上）。[36P + 2P预告]](http://www.sexinsex.net/bbs/disbox.php?action=viewpost&pid=86356761)
 1. [【Dark 妖艳贴】第十八贴，光棍节的惊喜，1米8的模特（下）。[24P + 8P预告 补充10P预告]](http://www.sexinsex.net/bbs/disbox.php?action=viewpost&pid=89311650)
 
-#### Others
+### Others
 - [Theporndude](https://theporndude.com/zh)
 - [SM投稿](https://www.xianzi06.com/forum-106-41.html)
 - [说服老婆3P-Video](https://91porny.com/author/%E8%AF%B4%E6%9C%8D%E8%80%81%E5%A9%863p)
@@ -141,3 +186,9 @@ OL美人妻酒店诱惑                                      | 91Porn   | 2018/0
 [fuqinzhu-f]: -->
 [shibaban]:https://telegra.ph/Twitter-%E5%8D%81%E5%85%AB%E8%88%AC%E5%8F%8D%E5%B7%AE-01-27
 [monday]:https://telegra.ph/Tele-Monday-pic-02-04
+[lens4wife]:https://telegra.ph/%E4%B8%BA%E5%A6%BB%E8%80%8C%E6%91%84-07-02
+[flower-1]:https://telegra.ph/91-%E9%82%A3%E4%BA%9B%E8%8A%B1%E5%84%BF%E8%82%A5%E8%87%80%E9%A3%8E%E9%AA%9A%E8%82%9B%E4%BA%A4%E5%BE%A1%E5%A7%90-01-14
+[sluttyeva]:https://telegra.ph/%E5%A8%87%E5%A6%BB%E4%B8%8E%E5%A4%A7%E5%AD%A6%E7%94%9F%E5%BC%9F%E5%BC%9F%E9%A6%96%E6%AC%A13p-%E6%B0%94%E6%B0%9B%E6%8B%89%E6%BB%A1%E5%A4%9A%E5%9B%BE%E8%AE%B0%E5%BD%95-08-26
+[amber-2]:https://telegra.ph/91%E7%AC%AC%E5%85%AD%E8%B4%B434%E5%B2%81%E9%AA%9A%E5%A6%BB%E7%B4%A7%E8%BA%AB%E7%89%9B%E4%BB%94%E5%BA%93%E9%87%8C%E4%B8%9D%E5%BE%AE%E9%9C%B2%E8%84%B8%E5%8A%A8%E5%9B%BE%E7%94%B3%E7%B2%BE-08-26
+[doctorsonny-1]:https://telegra.ph/%E7%BB%BF%E5%85%89%E7%AC%AC%E4%B8%80%E9%9B%86%E5%8F%97%E9%82%80%E7%BB%BF%E5%B8%BD%E5%A4%A7%E5%AD%A6%E7%94%9F%E6%83%85%E4%BE%A3%E8%B0%83%E6%95%99-08-26
+[doctorsonny-2]:https://telegra.ph/%E7%BB%BF%E5%85%89%E7%AC%AC%E4%BA%8C%E9%9B%86%E7%BB%BF%E5%B8%BD%E5%A4%A7%E5%AD%A6%E7%94%9F%E6%83%85%E4%BE%A3%E8%B0%83%E6%95%99%E6%88%B7%E5%A4%96%E9%9C%B2%E5%87%BA%E5%A9%9A%E7%BA%B1%E5%86%99%E7%9C%9F-08-26
