--- a/_posts/fu/2018-01-06-light.md
+++ b/_posts/fu/2018-01-06-light.md
@@ -31,18 +31,17 @@ image:
 
 下面的故事，充满了唯美范，与我以前的风格大相径庭。但是却又真实存在与发生，请先从文字读起吧……
 
-![](1.jpg){: .normal style="max-width: 33%"}
-![](2.jpg){: .normal style="max-width: 33%"}
-![](3.jpg){: .normal style="max-width: 33%"}
-![](4.jpg){: .normal style="max-width: 33%"}
-![](5.jpg){: .normal style="max-width: 33%"}
-![](6.jpg){: .normal style="max-width: 33%"}
-![](7.jpg){: .normal style="max-width: 33%"}
-![](8.jpg){: .normal style="max-width: 33%"}
-![](9.jpg){: .normal style="max-width: 33%"}
-![](10.jpg){: .normal style="max-width: 33%"}
+![](1.jpg){: .normal .me-2 style="zoom: 45%"}
+![](2.jpg){: .normal .me-2 style="zoom: 45%"}
+![](3.jpg){: .normal .me-2 style="zoom: 45%"}
+![](4.jpg){: .normal .me-2 style="zoom: 45%"}
+![](5.jpg){: .normal .me-2 style="zoom: 45%"}
+![](6.jpg){: .normal .me-2 style="zoom: 45%"}
+![](7.jpg){: .normal .me-2 style="zoom: 45%"}
+![](8.jpg){: .normal .me-2 style="zoom: 45%"}
+![](9.jpg){: .normal .me-2 style="zoom: 45%"}
+![](10.jpg){: .normal style="zoom: 45%"}
 _1~10_
-
 
 读到这里，相信大家基本明白了剧情，下面简单介绍下参与人物：
 
