fix compile wrong

--- a/_posts/buer/2023-05-07-daily.md
+++ b/_posts/buer/2023-05-07-daily.md
@@ -41,19 +41,19 @@ _05_
 ![](36.jpg)
 _06_
 
-![](36-1.jpg)
+![](36-1.JPG)
 _07_
 
 ![](36-2.jpg)
 _08_
 
-![](37.jpg)
+![](37.JPG)
 _09_
 
 ![](37-1.jpg)
 _10_
 
-![](37-2.jpg)
+![](37-2.JPG)
 _11_
 
 ![](38-1.jpg)
