BUG: can not find image files

--- a/_posts/buer/2023-05-01-one.md
+++ b/_posts/buer/2023-05-01-one.md
@@ -8,7 +8,7 @@ categories: [buer]
 tags: [sm]
 math: true
 mermaid: true
-img_path: /assets/img/posts/buer/
+media_subpath: /assets/img/posts/buer/
 image:
   path: 0.jpg
   width: 800
