--- a/_posts/fu/2018-02-02-horse.md
+++ b/_posts/fu/2018-02-02-horse.md
@@ -8,7 +8,7 @@ categories: [fu]
 tags: [sm]
 math: true
 mermaid: true
-img_path: /assets/img/posts/2018-02-02/
+media_subpath: /assets/img/posts/2018-02-02/
 image:
   path: 0.jpg
   width: 800
