--- a/_posts/fu/2019-09-22-fang-b.md
+++ b/_posts/fu/2019-09-22-fang-b.md
@@ -8,7 +8,7 @@ categories: [fu]
 tags: [sm, fangzi]
 math: true
 mermaid: true
-img_path: /assets/img/posts/2019-09-21/
+media_subpath: /assets/img/posts/2019-09-21/
 image:
   path: b-0.jpg
   width: 800
