--- a/_posts/fu/2019-09-23-fang-c.md
+++ b/_posts/fu/2019-09-23-fang-c.md
@@ -8,7 +8,7 @@ categories: [fu]
 tags: [sm, fangzi]
 math: true
 mermaid: true
-img_path: /assets/img/posts/2019-09-23/
+media_subpath: /assets/img/posts/2019-09-23/
 image: 30.jpg
 ---
 
