--- a/_posts/fu/2020-07-10-qiqi.md
+++ b/_posts/fu/2020-07-10-qiqi.md
@@ -8,7 +8,7 @@ categories: [fu]
 tags: [sm]
 math: true
 mermaid: true
-img_path: /assets/img/posts/2020-07-10/
+media_subpath: /assets/img/posts/2020-07-10/
 image:
   path: 0.jpg
   width: 800
