--- a/_posts/darkreaver/2012-07-22-ballet_3p.md
+++ b/_posts/darkreaver/2012-07-22-ballet_3p.md
@@ -8,7 +8,7 @@ categories: [darkreaver]
 tags: [beauty]
 math: true
 mermaid: true
-img_path: /assets/img/posts/2012-07-22/
+media_subpath: /assets/img/posts/2012-07-22/
 image:
   path: 0.jpg
   width: 800
