--- a/_posts/darkreaver/2013-02-20-model_2.md
+++ b/_posts/darkreaver/2013-02-20-model_2.md
@@ -8,7 +8,7 @@ categories: [darkreaver]
 tags: [beauty]
 math: true
 mermaid: true
-img_path: /assets/img/posts/2013-02-20/
+media_subpath: /assets/img/posts/2013-02-20/
 image:
   path: 0.jpg
   width: 800
