--- a/_posts/fu/2017-10-24-white.md
+++ b/_posts/fu/2017-10-24-white.md
@@ -8,7 +8,7 @@ categories: [fu]
 tags: [sm]
 math: true
 mermaid: true
-img_path: /assets/img/posts/2017-10-24/
+media_subpath: /assets/img/posts/2017-10-24/
 image:
   path: 0.jpg
   width: 800
