--- a/_posts/fu/2018-01-06-light.md
+++ b/_posts/fu/2018-01-06-light.md
@@ -8,7 +8,7 @@ categories: [fu]
 tags: [sm]
 math: true
 mermaid: true
-img_path: /assets/img/posts/2018-01-06/
+media_subpath: /assets/img/posts/2018-01-06/
 image:
   path: 0.jpg
   width: 800
