--- a/_posts/fu/2021-11-05-fancha.md
+++ b/_posts/fu/2021-11-05-fancha.md
@@ -8,7 +8,7 @@ categories: [fu]
 tags: [sm]
 math: true
 mermaid: true
-img_path: /assets/img/posts/2021-11-05/
+media_subpath: /assets/img/posts/2021-11-05/
 image:
   path: 0.jpg
   width: 800
